# tauri-app-starter-kit

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.json
.claude/skills/tauri-desktop-app/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  index.md  structure.md
docs/src/guides/: ai.md  autosave.md  crash-reporting.md  drag-drop.md  ipc-commands.md  keyring.md  localization.md  menus.md  notifications.md  panels.md  theming.md  (+7 more)
public/assets/: README.md
src/: App.tsx  changelog.json  main.js  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autosave.rs  commands.rs  crash_reporter.rs  diagnostics.rs  lib.rs  menu.rs  notifications.rs  recent_files.rs  settings.rs  shortcuts.rs  tray.rs  updater.rs  windows.rs
src/components/: ErrorBoundary.tsx
src/contexts/: I18nContext.tsx  ToastContext.tsx
src/hooks/: useContextMenu.ts  useDragDrop.ts  useFirstRun.ts  useKeyboardShortcuts.ts  useSettings.ts  useToast.ts  useTranslation.ts  useUndoRedo.ts
src/lib/: branding.js  branding.ts  crash.ts  i18n.ts  ipc.js  ipc.ts  undoRedo.ts  window-utils.js
src/locales/: en.json  es.json
src/styles/: global.css  shared.css  theme.css
src/windows/: about.html  about.js  logs.html  logs.js  settings.html  settings.js  shortcuts.html  shortcuts.js  splash.html  splash.js  update.html  update.js  welcome.html  welcome.js  whatsnew.html  whatsnew.js
(+19 files in other folders)
