[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "5"
url = "2"
tokio = { version = "1", features = ["time"] }
tauri = { version = "2.9.5", features = [
  "devtools",           # Web inspector (Cmd+Alt+I). Remove for App Store builds.
  "tray-icon",          # System tray support
  "protocol-asset",     # Serve bundled assets (images, fonts) via asset:// protocol
  "image-png",          # PNG image support for tray icons, notifications
  "image-ico",          # ICO image support (Windows)
  "linux-libxdo",       # Required for Cut/Copy/Paste menu items on Linux
] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-keyring = "0.1"
tauri-plugin-normalize = { path = "../../tauri-plugin-normalize" }
